--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -4,3 +4,4 @@ server.port=8888
 spring.cloud.config.server.git.uri=git@github.com:shanpengfei7/spring-cloud-demo.git
 spring.cloud.config.server.git.search-paths=/Users/shanpengfei/work/idea/study/spring-cloud
 spring.cloud.config.label=master
+eureka.client.service-url.defaultZone=http://localhost:8889/eureka
