--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=config-server
 server.port=8888
 
-spring.cloud.config.server.git.uri=git@github.com:shanpengfei7/spring-cloud-demo.git
-spring.cloud.config.server.git.search-paths=/Users/shanpengfei/work/idea/study/spring-cloud
+spring.cloud.config.server.git.uri=https://github.com/pnfy/demo.git
+spring.cloud.config.server.git.search-paths=/
 spring.cloud.config.label=master
+spring.cloud.config.server.git.username=pnfy_shan@163.com
+spring.cloud.config.server.git.password=Spf123456
 eureka.client.service-url.defaultZone=http://localhost:8889/eureka
