--- a/config-client/src/main/resources/application.properties
+++ b/config-client/src/main/resources/application.properties
@@ -6,4 +6,11 @@ spring.cloud.config.profile=dev
 eureka.client.service-url.defaultZone=http://localhost:8889/eureka/
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.service-id=config-server
-server.port=8881
+server.port=8882
+#忽略权限拦截
+management.security.enabled=false
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
